--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=ProjectPills
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/TestMap.TestMap
-GameDefaultMap=/Game/Maps/TestMap.TestMap
+EditorStartupMap=/Game/Maps/200M_field.200M_field
+GameDefaultMap=/Game/Maps/200M_field.200M_field
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
