술래 카메라 렌더 타겟 UI 추가
shw : 술래의 미니 화면 구성용 씬 캡쳐 렌더 타겟을 UI에 표시

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,4 +2,6 @@
 ProjectID=61AB417D4501542864F7A78036D03C95
 ProjectName=Top Down BP Game Template
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+ForDistribution=True
 
